--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@fontsource/montserrat": "^4.5.14",
     "gatsby": "^5.5.0",
     "gatsby-plugin-feed": "^5.5.0",
+    "gatsby-plugin-gatsby-cloud": "^5.5.0",
     "gatsby-plugin-image": "^3.5.0",
     "gatsby-plugin-manifest": "^5.5.0",
+    "gatsby-plugin-postcss": "^6.5.0",
     "gatsby-plugin-sharp": "^5.5.0",
     "gatsby-remark-images": "^7.5.0",
     "gatsby-remark-prismjs": "^7.5.0",
     "gatsby-remark-responsive-iframe": "^6.5.0",
     "gatsby-source-filesystem": "^5.5.0",
+    "gatsby-source-strapi": "^3.0.4",
     "gatsby-transformer-remark": "^6.5.0",
     "gatsby-transformer-sharp": "^5.5.0",
     "prismjs": "^1.29.0",
