--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "dependencies": {
     "@fontsource/merriweather": "^4.5.14",
     "@fontsource/montserrat": "^4.5.14",
+    "@headlessui/react": "^1.7.8",
+    "@heroicons/react": "^2.0.14",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "tailwindcss/typography",
+    "animejs": "^3.2.1",
+    "fortawesome": "^0.0.1-security",
+    "framer-motion": "^8.5.5",
     "gatsby": "^5.5.0",
     "gatsby-plugin-feed": "^5.5.0",
     "gatsby-plugin-gatsby-cloud": "^5.5.0",
@@ -27,11 +32,21 @@
     "gatsby-source-strapi": "^3.0.4",
     "gatsby-transformer-remark": "^6.5.0",
     "gatsby-transformer-sharp": "^5.5.0",
+    "headlessui": "^0.0.0",
+    "heroicons": "^2.0.14",
+    "mapbox-gl": "^2.12.0",
     "prismjs": "^1.29.0",
     "react": "^18.1.0",
+    "react-cookie-consent": "^8.0.1",
+    "react-countup": "^6.4.1",
     "react-dom": "^18.1.0",
     "react-helmet": "^6.1.0",
-    "slick-carousel": "^1.8.1"
+    "react-icons": "^4.7.1",
+    "react-intersection-observer": "^9.4.1",
+    "react-map-gl": "^7.0.21",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "worker-loader": "^3.0.8"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
